--- a/QBO Events Management/Views/People/Index.cshtml
+++ b/QBO Events Management/Views/People/Index.cshtml
@@ -10,9 +10,7 @@
         <h1 class="title">People</h1>
         <br />
         <div class="col-lg-3">
-            <p>
-                @Html.ActionLink("Create New", "Create")
-            </p>
+            <a class="btn btn-primary" href="@Url.Action("Create")">Add Person</a>
         </div>
         <div class="col-lg-6">
 
