--- a/QBO Events Management/Views/Participants/List.cshtml
+++ b/QBO Events Management/Views/Participants/List.cshtml
@@ -11,6 +11,7 @@
         <h1 class="title">PARTICIPANTS</h1>
         <br />
         <div class="col-lg-3">
+            <a class="btn btn-danger" href="@Url.Action("ListOfEvents","Events")">Back</a>
         </div>
         <div class="col-lg-6">
 
@@ -35,7 +36,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model)
+            @foreach (var item in Model)
             {
                     <tr>
                         <td>
